fix(vue-dom): add type declarations for the typescript gang
- added d.ts.files with types
- configured vue-dom package to handle typesecript (configured to catch up vite alias. Note that demo and lib are in the same folder, so we can't install one as a dependency of the other.

amend

fix types

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "license": "ISC",
   "author": "Renato de Leão <https://positionrelative.co>",
   "scripts": {
-    "dev:vue-dom": "pnpm --filter=floating-ui.vue-dom run dev"
+    "dev:vue-dom": "pnpm --filter=floating-ui.vue-dom run dev",
+    "typecheck:vue-dom": "pnpm --filter=floating-ui.vue-dom run typecheck"
   },
   "prettier": {
     "singleQuote": true,
     "proseWrap": "always"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "typescript": "~4.8.4"
   }
 }
