--- a/packages/vue-dom/package.json
+++ b/packages/vue-dom/package.json
@@ -1,7 +1,7 @@
 {
   "name": "floating-ui.vue-dom",
-  "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "exports": "./src/index.js",
   "types": "./src/index.d.ts",
