--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Renato de Leão <https://positionrelative.co>",
   "scripts": {
     "dev:vue-dom": "pnpm --filter=floating-ui.vue-dom run dev",
+    "dev:vue-dom-interactions": "pnpm --filter=floating-ui.vue-dom-interactions run build",
     "typecheck:vue-dom": "pnpm --filter=floating-ui.vue-dom run typecheck",
     "play:vue": "pnpm --filter=playground-vue run dev"
   },
