refactor: drop "dom" suffix from vue packages
also named package full name floating-ui-x-vue instead of using the dot notation.

The dom suffix only makes sense in react world where there's react dom package. Not in vue land.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "floating-ui.vue-dom",
+  "name": "floating-ui-x-vue",
   "version": "0.0.0",
-  "private": true,
   "license": "MIT",
   "type": "module",
   "exports": "./src/index.js",
