--- a/apps/playground-vue/package.json
+++ b/apps/playground-vue/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.2.41",
-    "floating-ui.vue-dom": "workspace:*",
-    "floating-ui.vue-dom-interactions": "workspace:*"
+    "floating-ui-x-vue": "workspace:*",
+    "floating-ui-x-vue-interactions": "workspace:*"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
