--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "packageManager": "pnpm@7.14.2",
   "author": "Renato de Leão <https://positionrelative.co>",
   "scripts": {
-    "dev:vue-dom": "pnpm --filter=floating-ui.vue-dom run dev",
-    "dev:vue-dom-interactions": "pnpm --filter=floating-ui.vue-dom-interactions run build",
-    "typecheck:vue-dom": "pnpm --filter=floating-ui.vue-dom run typecheck",
+    "dev:vue": "pnpm --filter=floating-ui-x-vue run dev",
+    "dev:vue-interactions": "pnpm --filter=floating-ui-x-vue-interactions run build",
+    "typecheck:vue": "pnpm --filter=floating-ui-x-vue run typecheck",
     "play:vue": "pnpm --filter=playground-vue run dev"
   },
   "prettier": {
