--- a/packages/vue-interactions/package.json
+++ b/packages/vue-interactions/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "floating-ui.vue-dom-interactions",
+  "name": "floating-ui-x-vue-interactions",
   "version": "0.0.0",
+  "private": true,
   "license": "MIT",
   "type": "module",
   "exports": "./src/index.js",
@@ -16,7 +17,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "floating-ui.vue-dom": "workspace:*"
+    "floating-ui-x-vue": "workspace:*"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
