--- a/packages/vue-interactions/package.json
+++ b/packages/vue-interactions/package.json
@@ -20,7 +20,7 @@
     "floating-ui-x-vue": "workspace:*"
   },
   "peerDependencies": {
-    "vue": "^3.0.0"
+    "vue": "^3.0.0 | || ^2.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
