--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -19,7 +19,7 @@
     "@floating-ui/dom": "^1.0.3"
   },
   "peerDependencies": {
-    "vue": "^3.0.0"
+    "vue": "^3.0.0 | || ^2.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
