--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "proseWrap": "always"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.25.2",
     "prettier": "^2.7.1",
     "typescript": "~4.8.4"
   }
