chore: initial release

--- a/packages/vue-interactions/package.json
+++ b/packages/vue-interactions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "floating-ui-x-vue-interactions",
-  "version": "0.0.0",
+  "version": "0.0.0-initial-20221104164148",
   "private": true,
   "license": "MIT",
   "type": "module",
