--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "floating-ui-x-vue",
-  "version": "0.0.0",
+  "version": "0.0.0-initial-20221104164148",
   "license": "MIT",
   "type": "module",
   "exports": "./src/index.js",
@@ -26,5 +26,8 @@
     "sass": "^1.55.0",
     "vite": "^3.1.0",
     "vue": "^3.2.37"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
