--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.0-initial-20221104164148",
   "license": "MIT",
   "type": "module",
-  "exports": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./dist/floating-ui-x-vue.umd.cjs",
+  "module": "./dist/floating-ui-x-vue.js",
+  "exports": {
+    ".": {
+      "import": "./dist/floating-ui-x-vue.js",
+      "require": "./dist/floating-ui-x-vue.umd.cjs"
+    },
+    "./package.json": "./package.json"
+  },
+  "types": "./index.d.ts",
   "files": [
     "dist/",
     "src/**/*.d.ts"
