--- a/apps/playground-vue/package.json
+++ b/apps/playground-vue/package.json
@@ -1,7 +1,7 @@
 {
   "name": "playground-vue",
   "private": true,
-  "version": "0.0.0-initial-20221104174409",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
