--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -7,12 +7,13 @@
   "module": "./dist/floating-ui-x-vue.js",
   "exports": {
     ".": {
+      "types": "./src/index.d.ts",
       "import": "./dist/floating-ui-x-vue.js",
       "require": "./dist/floating-ui-x-vue.umd.cjs"
     },
     "./package.json": "./package.json"
   },
-  "types": "./index.d.ts",
+  "types": "./src/index.d.ts",
   "files": [
     "dist/",
     "src/**/*.d.ts"
